# ObsidianPDFToMarkdown

./: .gitignore  LICENCE  README.md  pyproject.toml
EXTRAS/: main v0.1.py
db/: chroma.sqlite3
src/markdowns/: output.md
src/pdftomardown/: crew.py
src/pdftomarkdown/: main.py
src/pdftomarkdown/instructions/: Obsidiantolls.yaml  instructions.yaml  templates.md
src/simplepdfreader/: agents.py  main.py  tasks.py  tools.py
